--- a/insta.html
+++ b/insta.html
@@ -6,15 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- WidgetBot Crate (balão flutuante do Discord) -->
-  <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer></script>
-  <script>
-    window.addEventListener("DOMContentLoaded", () => {
-      new Crate({
-        server: '1067143632538325012', // <-- seu servidor real
-        channel: '1445428834576105503'   // coloque o ID do canal opcional
-      })
+<script src='https://cdn.jsdelivr.net/npm/@widgetbot/crate@3' async defer>
+    new Crate({
+        server: '1257429225422459024', // ৎ💫౨﹕ 𝐌y 𝐇ero 𝐀cademia: 𝑵𝒆𝒘 𝑩𝒆𝒈𝒈𝒊𝒏𝒊𝒏𝒈𝒔
+        channel: '1363164240264822974' // #﹒ৎ📸౨﹕instagram﹒९
     })
-  </script>
+</script>
 
   <!-- WidgetBot HTML Embed (embed fixo do canal) -->
   <script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
@@ -250,12 +247,13 @@
 
           <div class="discord-widget-wrapper">
             <!-- CHAT REAL -->
-            <widgetbot
-              server="1067143632538325012"
-              channel="1445428834576105503"
-              width="100%"
-              height="500"
-            ></widgetbot>
+<widgetbot
+    server="1257429225422459024"
+    channel="1363164240264822974"
+    width="800"
+    height="600"
+></widgetbot>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
           </div>
         </div>
       </aside>
