--- a/professores.html
+++ b/professores.html
@@ -312,10 +312,21 @@
       <div class="prof-card">
         <div class="prof-img"><img src="elias.png"></div>
         <div class="prof-name">Elias Ainsworth</div>
-        <div class="prof-role">Enfermagem</div>
+        <div class="prof-role">Enfermagem & SUPORTE MÉDICO</div>
         <div class="prof-desc">
           Instrutor de primeiros socorros e especialista em enfermagem. Cuida dos ferimentos de seus alunos e os ensina técnicas e procedimentos de resgate de civís e aliados. <br>
           — "...Força bruta é algo simples. Reanimar alguém que está entre a vida e a morte... Isso sim é coragem de verdade..."
+        </div>
+      </div>
+
+      <!-- Professor 8 -->
+      <div class="prof-card">
+        <div class="prof-img"><img src="elias.png"></div>
+        <div class="prof-name">RECOVERY GIRL</div>
+        <div class="prof-role">CURA & SUPORTE MÉDICO</div>
+        <div class="prof-desc">
+          Veterana da medicina heroica, especialista em restauração acelerada e primeiros socorros avançados. <br>
+          — “Curar é mais que remendar feridas… é garantir que você possa lutar mais um dia.”
         </div>
       </div>
 
@@ -338,4 +349,5 @@
 
 </body>
 </html>
+
 
