--- a/professores.html
+++ b/professores.html
@@ -321,7 +321,7 @@
 
       <!-- Professor 8 -->
       <div class="prof-card">
-        <div class="prof-img"><img src="elias.png"></div>
+        <div class="prof-img"><img src="recovery.png"></div>
         <div class="prof-name">RECOVERY GIRL</div>
         <div class="prof-role">CURA & SUPORTE MÉDICO</div>
         <div class="prof-desc">
@@ -349,5 +349,6 @@
 
 </body>
 </html>
+
 
 
