--- a/ilu.html
+++ b/ilu.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <title>Illusion • Divisão de Contenção</title>
+  <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Favicon (pode ser PNG, ICO ou GIF animado) -->
+  <link rel="icon" type="image/gif" href="https://tenor.com/bV5be.gif" />
+  
 
   <style>
     /* --------- RESET --------- */
