--- a/ilu.html
+++ b/ilu.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Favicon (pode ser PNG, ICO ou GIF animado) -->
-  <link rel="icon" type="image/gif" href="https://tenor.com/bV5be.gif" />
+  <link rel="icon" type="image/png" href="https://media.tenor.com/o0mvoouLlywAAAAe/pfp.png" />
   
 
   <style>
