--- a/principal.html
+++ b/principal.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+    <!-- Open Graph / Discord Preview -->
+<!-- OPEN GRAPH / LINK PREVIEW -->
+<meta property="og:title" content="Illusion • Acesso Externo" />
+<meta property="og:description" content="Canal oficial de recrutamento, informações públicas e acesso supervisionado pela Illusion. Operações monitoradas." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://shadowlefty.github.io/UA/principal.html" />
+<meta property="og:image" content="https://media.discordapp.net/attachments/1182047177447571498/1419806263554080888/raw.png?ex=6930b39f&is=692f621f&hm=89e30631a475679d4fce2d91d61e6ed3ef0b7263d673a208209f0e44c86af06a&=&format=webp&quality=lossless&width=1006&height=1006" />
+<meta name="theme-color" content="#e53935" />
 <head>
   <meta charset="UTF-8" />
   <title>Illusion • Carreiras & Oportunidades</title>
@@ -1077,3 +1085,4 @@ ${curriculo}
 
 </body>
 </html>
+
