--- a/principal.html
+++ b/principal.html
@@ -6,7 +6,7 @@
 <meta property="og:description" content="Canal oficial de recrutamento, informações públicas e acesso supervisionado pela Illusion. Operações monitoradas." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://shadowlefty.github.io/UA/principal.html" />
-<meta property="og:image" content="https://media.discordapp.net/attachments/1182047177447571498/1419806263554080888/raw.png?ex=6930b39f&is=692f621f&hm=89e30631a475679d4fce2d91d61e6ed3ef0b7263d673a208209f0e44c86af06a&=&format=webp&quality=lossless&width=1006&height=1006" />
+<meta property="og:image" content="https://media.discordapp.net/attachments/1182047177447571498/1445632064157126685/image.png?ex=69310d46&is=692fbbc6&hm=dd159bca20b68f911fcef3ac75d30f9e4e83d562a6513314ae2d3848b5aa9813&=&format=webp&quality=lossless" />
 <meta name="theme-color" content="#e53935" />
 <head>
   <meta charset="UTF-8" />
@@ -1085,4 +1085,5 @@ ${curriculo}
 
 </body>
 </html>
+
 
