--- a/principal.html
+++ b/principal.html
@@ -6,7 +6,7 @@
 <meta property="og:description" content="Canal oficial de recrutamento, informações públicas e acesso supervisionado pela Illusion. Operações monitoradas." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://shadowlefty.github.io/UA/principal.html" />
-<meta property="og:image" content="https://media.discordapp.net/attachments/1182047177447571498/1445633528598499431/image.png?ex=69310ea3&is=692fbd23&hm=8ea3405d768e3c6b28fb53e96edf8f3c417ceec3563175b5a0293252b1918811&=&format=webp&quality=lossless" />
+<meta property="og:image" content="https://media.discordapp.net/attachments/1182047177447571498/1445634650788855890/upscalemedia-transformed.png?ex=69310faf&is=692fbe2f&hm=919960fa8dafd5d684218a629368f8fffdc656858fc380358f7035bdc9496224&=&format=webp&quality=lossless&width=1089&height=1006" />
 <meta name="theme-color" content="#e53935" />
 <head>
   <meta charset="UTF-8" />
@@ -1085,6 +1085,7 @@ ${curriculo}
 
 </body>
 </html>
+
 
 
 
