--- a/resultados.html
+++ b/resultados.html
@@ -507,6 +507,42 @@
     </div>
 
     <div class="result-card"
+         data-score-exam1="52"
+         data-score-exam2="72"
+         data-status-exam1="Aprovado - Bom"
+         data-status-exam2="Aprovado - Bom"
+         data-status-exam3="Aprovado">
+      <div class="result-name">Willam Hirsch</div>
+      <div class="result-user">@coyer0291</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+    </div>
+
+    <div class="result-card"
+         data-score-exam1="68"
+         data-score-exam2="30"
+         data-status-exam1="Aprovado - Muito Bom"
+         data-status-exam2="Reprovado (AV2) - Desempenho Inferior"
+         data-status-exam3="Aprovado">
+      <div class="result-name">Milena Haziel</div>
+      <div class="result-user">@pokkitwo</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+    </div>
+
+        <div class="result-card"
+         data-score-exam1="28"
+         data-score-exam2="54"
+         data-status-exam1="Aprovado - Desempenho Mínimo"
+         data-status-exam2="Reprovado (AV2) - Abaixo da Margem Mínima"
+         data-status-exam3="Aprovado">
+      <div class="result-name">Ragnar Fleshman</div>
+      <div class="result-user">@6bissexual_gay_ashiko9</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+    </div>
+
+    <div class="result-card"
          data-status-exam1="Informe a um professor/supervisor!"
          data-status-exam2="Informe a um professor/supervisor!"
          data-status-exam3="Informe a um professor/supervisor!">
@@ -598,4 +634,5 @@
 
 </body>
 </html>
+
 
