--- a/resultados.html
+++ b/resultados.html
@@ -552,6 +552,30 @@
       <div class="result-status">Informe a um professor/supervisor!</div>
     </div>
 
+        <div class="result-card"
+         data-score-exam1="100"
+         data-score-exam2="62"
+         data-status-exam1="Aprovado - Perfeito"
+         data-status-exam2="Aprovado - Margem Mínima"
+         data-status-exam3="Aprovado">
+      <div class="result-name">Azad Sora</div>
+      <div class="result-user">@nero_kmg</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+    </div>
+
+        <div class="result-card"
+         data-score-exam1="63"
+         data-score-exam2="60"
+         data-status-exam1="Aprovado - Muito Bom"
+         data-status-exam2="Aprovado - Margem Mínima"
+         data-status-exam3="Aprovado">
+      <div class="result-name">Kemori Kōsen</div>
+      <div class="result-user">@._eop3dr0k4</div>
+      <div class="result-score">0 / 100</div>
+      <div class="result-status"></div>
+        </div>
+    
   </div>
 
   <a href="home.html" class="back-link">← Voltar para a página inicial</a>
@@ -634,5 +658,6 @@
 
 </body>
 </html>
+
 
 
