--- a/principal.html
+++ b/principal.html
@@ -1082,7 +1082,7 @@ _Revisão: V.I.S. / R.E.C. poderão iniciar análise de perfil a qualquer moment
         {
           title: 'Nova candidatura recebida',
           description: description,
-          color: fffff,
+          color: 0xF5F5F5,
           footer: {
             text: 'Illusion • Núcleo de Recrutamento'
           },
@@ -1113,6 +1113,7 @@ _Revisão: V.I.S. / R.E.C. poderão iniciar análise de perfil a qualquer moment
 
 </body>
 </html>
+
 
 
 
