--- a/arquivos.html
+++ b/arquivos.html
@@ -503,14 +503,14 @@
     const VALID_USERS = [
       {
         user: 'fyodor',
-        pass: 'MvsS_Paradox13',
-        codename: 'FYODOR',
+        pass: 'par321',
+        codename: 'F-2',
         access: 'NA-A'
       },
       {
         user: 'yuigui',
         pass: 'cal123',
-        codename: 'YUIGUI',
+        codename: 'Y-3',
         access: 'NA-I'
       }
     ];
@@ -1047,7 +1047,7 @@ help
       const content =
 `ILLUSION // REPORT VIA TERMINAL
 
-Operador: ${currentUser.codename} (${currentUser.user})
+Operador: Conselho - **${currentUser.codename}**
 Acesso: ${currentUser.access}
 Timestamp: ${timestamp}
 
@@ -1073,3 +1073,4 @@ Canal monitorado por V.I.S. / R.E.C.`;
   </script>
 </body>
 </html>
+
